feat: HTML and Markdown to PDF conversion
Markdown (.md/.markdown) is rendered to HTML with CommonMark (+GFM tables)
and fed through the existing LibreOffice HTML->PDF path, preserving
headings/lists/bold/tables/code. HTML (.html/.htm) already routed through
soffice. Markdown stays classified as OFFICE so office gating
(pdfconduit.web.office.enabled) and concurrency guards still apply.
To-PDF frontend accepts the new extensions.